--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "maxmadou-v1.01-béta",
+  "name": "maxmadou-v1.01-beta",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-       "start": "node index.js"
+    "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.28.0"
+    "@google/genai": "^1.28.0",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
@@ -20,7 +22,4 @@
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
-}
-"scripts": {
-  "start": "node index.js"
 }
